--- a/src/BlazorTemplate.Server/BlazorTemplate.Server.csproj
+++ b/src/BlazorTemplate.Server/BlazorTemplate.Server.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MudBlazor" Version="6.2.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
