--- a/src/BlazorTemplate.Server/appsettings.Development.json
+++ b/src/BlazorTemplate.Server/appsettings.Development.json
@@ -1,3 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BlazorTemplateDb": "server=192.168.100.3;port=1432;user=root;password=1234;database=BlazorTemplateDb",
+    "BlazorTemplateIdentityDb": "server=192.168.100.3;port=1432;user=root;password=1234;database=BlazorTemplateIdentityDb"
+  },
   "DetailedErrors": true
 }
