--- a/src/BlazorTemplate.UserInterface/BlazorTemplate.UserInterface.csproj
+++ b/src/BlazorTemplate.UserInterface/BlazorTemplate.UserInterface.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,20 +6,21 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+
   <ItemGroup>
-  	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <SupportedPlatform Include="browser" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.11" />
     <PackageReference Include="MudBlazor" Version="6.2.2" />
-    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorTemplate.Application\BlazorTemplate.Application.csproj" />
     <ProjectReference Include="..\BlazorTemplate.Domain\BlazorTemplate.Domain.csproj" />
     <ProjectReference Include="..\BlazorTemplate.Infrastructure\BlazorTemplate.Infrastructure.csproj" />
-    <ProjectReference Include="..\BlazorTemplate.UserInterface\BlazorTemplate.UserInterface.csproj" />
   </ItemGroup>
 
 </Project>
