--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -17,11 +17,10 @@ jobs:
         id: get_repo_name
         run: echo "::set-output name=name::${{ github.event.repository.name }}"
 
-      - name: Rename folders and namespaces
+      - name: Rename folders, files and file content
         run: |
           repo_name=${{ steps.get_repo_name.outputs.name }}
-          find . -type f -name '*.cs' -exec sed -i "s/BlazorTemplate/$repo_name/g" {} \;
-          find . -type d -name 'BlazorTemplate*' -exec rename 's/BlazorTemplate/$repo_name/' {} \;
+          find . ! -path . -name '.*' -prune -o -type d -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/$repo_name/")"' \; \ && find . ! -path . -name '.*' -prune -o -type f \( -name '*.cs' -o -name '*.csproj' -o -name '*.sln' \) -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/$repo_name/g")"' \; \ && find . -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec sed -i 's/BlazorTemplate/$repo_name/g' {} + -print
 
       - name: Commit changes
         run: |
