--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -1,5 +1,6 @@
+---
 name: Configure New Repository
-'on':
+on:
   push:
     branches:
       - main
@@ -13,12 +14,14 @@ jobs:
         id: get_repo_name
         run: echo "::set-output name=name::${{ github.event.repository.name }}
       - name: Rename folders, files and file content
-        run: |
+        run: >
           repo_name=${{ steps.get_repo_name.outputs.name }}
-          find . ! -path . -name '.*' -prune -o -type d -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/$repo_name/")"' \;
-          find . ! -path . -name '.*' -prune -o -type f \( -name '*.cs' -o -name '*.csproj' -o -name '*.sln' \) -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/$repo_name/g")"' \;
-          find . -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec sed -i 's/BlazorTemplate/$repo_name/g' {}
 
+          find . ! -path . -name '.*' -prune -o -type d -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/${{ repo_name }}/")"' \;
+
+          find . ! -path . -name '.*' -prune -o -type f \( -name '*.cs' -o -name '*.csproj' -o -name '*.sln' \) -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/${{ repo_name }}/g")"' \;
+
+          find . -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec sed -i 's/BlazorTemplate/${{ repo_name }}/g' {}
       - name: Commit changes
         run: |
           git config --global user.email "tthedayismyenemy@gmail.com"
@@ -26,12 +29,12 @@ jobs:
           git add .
           git commit -m "Configure New Repository"
           git push
-
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           title: Configure New Repository
-          body: This pull request renames folders and namespaces to match the repository name.
+          body: This pull request renames folders and namespaces to match the repository
+            name.
           branch: main
           delete-branch: true
