--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -1,4 +1,3 @@
----
 name: Configure New Repository
 on:
   push:
@@ -12,16 +11,16 @@ jobs:
         uses: actions/checkout@v2
       - name: Get repository name
         id: get_repo_name
-        run: echo "::set-output name=name::${{ github.event.repository.name }}
+        run: echo "::set-output name=name::BlazorTemplate"
       - name: Rename folders, files and file content
-        run: >
+        run: |
           repo_name=${{ steps.get_repo_name.outputs.name }}
 
           find . ! -path . -name '.*' -prune -o -type d -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/${repo_name}/")"' \;
 
           find . ! -path . -name '.*' -prune -o -type f \( -name '*.cs' -o -name '*.csproj' -o -name '*.sln' \) -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/${repo_name}/g")"' \;
 
-          find . -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec sed -i 's/BlazorTemplate/${repo_name}/g' {}
+          find . -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec sed -i 's/BlazorTemplate/${repo_name}/g' {} 
       - name: Commit changes
         run: |
           git config --global user.email "tthedayismyenemy@gmail.com"
@@ -34,7 +33,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           title: Configure New Repository
-          body: This pull request renames folders and namespaces to match the repository
-            name.
+          body: This pull request renames folders and namespaces to match the repository name.
           branch: main
           delete-branch: true
