--- a/src/BlazorTemplate.Application/BlazorTemplate.Application.csproj
+++ b/src/BlazorTemplate.Application/BlazorTemplate.Application.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\BlazorTemplate.Infrastructure\BlazorTemplate.Infrastructure.csproj" />
-    <ProjectReference Include="..\BlazorTemplate.Domain\BlazorTemplate.Domain.csproj" />
+    <ProjectReference Include="..\${repo_name}.Infrastructure\${repo_name}.Infrastructure.csproj" />
+    <ProjectReference Include="..\${repo_name}.Domain\${repo_name}.Domain.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
