--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -3,39 +3,32 @@ on:
   push:
     branches:
       - main
-
 jobs:
   configure:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set repository name
-        id: set_repo_name
+      - name: Get repository name
+        id: get_repo_name
         run: echo "::set-output name=name::BlazorTemplate"
-
-      - name: Check if it's a new repository
-        id: check_new_repo
-        run: echo "::set-output name=is_new_repo::$(git rev-list --max-parents=0 HEAD | wc -l)"
-
-      - name: Run only for new repository
-        if: steps.check_new_repo.outputs.is_new_repo == '1'
+      - name: Rename folders, files and file content
         run: |
-          repo_name=${{ steps.set_repo_name.outputs.name }}
-          # Your configuration logic here
+          repo_name=${{ steps.get_repo_name.outputs.name }}
 
+          find ../../ ! -path . -name '.*' -prune -o -type d -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/${repo_name}/")"' \;
+
+          find ../../ ! -path . -name '.*' -prune -o -type f \( -name '*.cs' -o -name '*.csproj' -o -name '*.sln' \) -exec bash -c 'mv "{}" "$(echo "{}" | sed "s/BlazorTemplate/${repo_name}/g")"' \;
+
+          find ../../ -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec sed -i 's/BlazorTemplate/${repo_name}/g' {} +
       - name: Commit changes
-        if: steps.check_new_repo.outputs.is_new_repo == '1'
         run: |
           git config --global user.email "tthedayismyenemy@gmail.com"
           git config --global user.name "TheDayIsMyEnemy"
           git add .
           git commit -m "Configure New Repository"
-          git push origin main
-
+          git push
       - name: Create Pull Request
-        if: steps.check_new_repo.outputs.is_new_repo == '1'
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -43,9 +36,3 @@ jobs:
           body: This pull request renames folders and namespaces to match the repository name.
           branch: main
           delete-branch: true
-
-      - name: Remove setup files
-        if: steps.check_new_repo.outputs.is_new_repo == '1'
-        run: |
-          rm .github/workflows/configure-new-repo.yml
-          # Remove other setup files as needed
