--- a/src/BlazorTemplate.Server/BlazorTemplate.Server.csproj
+++ b/src/BlazorTemplate.Server/BlazorTemplate.Server.csproj
@@ -16,10 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\${repo_name}.Application\${repo_name}.Application.csproj" />
-    <ProjectReference Include="..\${repo_name}.Domain\${repo_name}.Domain.csproj" />
-    <ProjectReference Include="..\${repo_name}.Infrastructure\${repo_name}.Infrastructure.csproj" />
-    <ProjectReference Include="..\${repo_name}.UserInterface\${repo_name}.UserInterface.csproj" />
+    <ProjectReference Include="..\BlazorTemplate.Application\BlazorTemplate.Application.csproj" />
+    <ProjectReference Include="..\BlazorTemplate.Domain\BlazorTemplate.Domain.csproj" />
+    <ProjectReference Include="..\BlazorTemplate.Infrastructure\BlazorTemplate.Infrastructure.csproj" />
+    <ProjectReference Include="..\BlazorTemplate.UserInterface\BlazorTemplate.UserInterface.csproj" />
   </ItemGroup>
 
 </Project>
