--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -47,6 +47,7 @@ jobs:
           title: Configure New Repository
           body: This pull request renames folders and namespaces to match the repository name.
           branch: configure-new-repo
+          base: main
           delete-branch: true
 
       - name: Remove setup files
