--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -15,11 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.created && github.repository != 'TheDayIsMyEnemy/BlazorTemplate' }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PAT_TOKEN }}
-
       - name: Set repository name
         id: repo_name
         run: echo "::set-output name=name::${{ github.event.repository.name }}"
@@ -33,22 +28,20 @@ jobs:
       - name: Remove setup files
         run: rm .github/workflows/configure-new-repo.yml
 
-      # - name: Commit changes
-      #   run: |
-      #     git config user.name github-actions
-      #     git config user.email github-actions@github.com
-      #     git checkout -b "configure-new-repo"
-      #     git add .
-      #     git commit -m "Configure new repo"
-      #     git push origin configure-new-repo
+      - name: Create commits
+        uses: actions/checkout@v3
+      - run: |
+          git config user.name 'TheDayIsMyEnemy'
+          git config user.email 'TheDayIsMyEnemy@users.noreply.github.com'
+          git add -A
+          git commit -m "Update project structure"
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.PAT_TOKEN }}
-          commit-message: Configure new repo
+          token: ${{ secrets.PAT_TOKEN  || secrets.GITHUB_TOKEN }}
           title: Configure new repo
           body: This pull request renames folders and namespaces to match the repository name.
           branch: configure-new-repo
           base: main
-          # delete-branch: true
+          delete-branch: true
