--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -39,8 +39,7 @@ jobs:
           git add -A
           git commit -m "Update project structure"
           git push -u origin new-repo
-          git checkout -b main
-          git pull -u origin main
+          git checkout main
           git merge new-repo
           git add .
           git commit -m "Merge into main"
